// Copyright (c) 2019 Minoru Osuka
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 		http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "protobuf/raft/raft.proto";

package index;

option go_package = "github.com/mosuka/blast/protobuf/index";

service Index {
    rpc Join (raft.Node) returns (google.protobuf.Empty) {}
    rpc Leave (raft.Node) returns (google.protobuf.Empty) {}
    rpc GetNode (google.protobuf.Empty) returns (raft.Node) {}
    rpc GetCluster (google.protobuf.Empty) returns (raft.Cluster) {}
    rpc Snapshot (google.protobuf.Empty) returns (google.protobuf.Empty) {}

    rpc Get (Document) returns (Document) {}
    rpc Index (stream Document) returns (UpdateResult) {}
    rpc Delete (stream Document) returns (UpdateResult) {}
    rpc Search (SearchRequest) returns (SearchResponse) {}

    rpc GetIndexConfig (google.protobuf.Empty) returns (IndexConfig) {}
    rpc GetIndexStats (google.protobuf.Empty) returns (IndexStats) {}
}

message Document {
    string id = 1;
    google.protobuf.Any fields = 2;
}

message UpdateResult {
    int32 count = 1;
}

message IndexConfig {
    google.protobuf.Any index_mapping = 1;
    string index_type = 2;
    string index_storage_type = 3;
}

message IndexStats {
    google.protobuf.Any stats = 1;
}

message SearchRequest {
    google.protobuf.Any search_request = 1;
}

message SearchResponse {
    google.protobuf.Any search_result = 1;
}

message IndexCommand {
    enum Type {
        UNKNOWN_COMMAND = 0;
        SET_METADATA = 1;
        DELETE_METADATA = 2;
        INDEX_DOCUMENT = 3;
        DELETE_DOCUMENT = 4;
    }
    Type type = 1;
    google.protobuf.Any data = 2;
}
